hphp/hack/test/typecheck/shapes_cc_6.php.exp
File "shapes_cc_6.php", line 22, characters 3-7:
Shape field name is class constant from Y (Typing[4085])
File "shapes_cc_6.php", line 21, characters 3-7:
But expected constant from X
